# serializer version: 1
# name: test_array_literal_ok[literal_array_empty][sql]
  'SELECT []'
# ---
# name: test_array_literal_ok[literal_array_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
  
  '''
# ---
# name: test_array_literal_ok[literal_array_multi][sql]
  'SELECT [1,2,3]'
# ---
# name: test_array_literal_ok[literal_array_multi][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix][sql]
  'SELECT ARRAY [1,2,3]'
# ---
# name: test_array_literal_ok[literal_array_prefix][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_prefix
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_compound_type][sql]
  'SELECT ARRAY<STRUCT<a INT64>>[STRUCT(1)]'
# ---
# name: test_array_literal_ok[literal_array_prefix_compound_type][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  struct_type
                    struct_type_list
                      struct_field
                        ident	a
                        type
                          type_name	INT64
            array_literal_item_list
              named_struct_literal
                named_struct_literal_prefix
                named_struct_literal_item_list
                  named_struct_literal_item
                    integer_literal	1
  
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_nested_compound_type][sql]
  'SELECT ARRAY<STRUCT<a STRUCT<b INT64>>>[STRUCT(STRUCT(1))]'
# ---
# name: test_array_literal_ok[literal_array_prefix_nested_compound_type][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  struct_type
                    struct_type_list
                      struct_field
                        ident	a
                        type
                          struct_type
                            struct_type_list
                              struct_field
                                ident	b
                                type
                                  type_name	INT64
            array_literal_item_list
              named_struct_literal
                named_struct_literal_prefix
                named_struct_literal_item_list
                  named_struct_literal_item
                    named_struct_literal
                      named_struct_literal_prefix
                      named_struct_literal_item_list
                        named_struct_literal_item
                          integer_literal	1
  
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_scalar_type][sql]
  'SELECT ARRAY<INT64>[1,2,3]'
# ---
# name: test_array_literal_ok[literal_array_prefix_scalar_type][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  type_name	INT64
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  
  '''
# ---
# name: test_array_literal_ok[literal_array_single][sql]
  'SELECT [1]'
# ---
# name: test_array_literal_ok[literal_array_single][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          array_literal
            array_literal_item_list
              integer_literal	1
  
  '''
# ---
# name: test_bignumeric_literal_ok[literal_bignumeric][sql]
  "SELECT BIGNUMERIC '42'"
# ---
# name: test_bignumeric_literal_ok[literal_bignumeric][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bignumeric_literal	'42'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_empty][sql]
  'SELECT b""'
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_nonempty][sql]
  'SELECT b"bytes"'
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_cap][sql]
  'SELECT BR"bytes"'
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_cap][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	BR"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_empty][sql]
  'SELECT br""'
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_nonempty][sql]
  'SELECT rb"bytes"'
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	rb"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_empty][sql]
  "SELECT b''"
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_nonempty][sql]
  "SELECT b'bytes'"
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b'bytes'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_empty][sql]
  "SELECT br''"
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_nonempty][sql]
  "SELECT br'bytes'"
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br'bytes'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_empty][sql]
  'SELECT b""""""'
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b""""""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_nonempty][sql]
  'SELECT b"""We say: "hello"."""'
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b"""We say: "hello"."""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_empty][sql]
  'SELECT br""""""'
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br""""""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_nonempty][sql]
  'SELECT br"""We say: "hello"."""'
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br"""We say: "hello"."""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_empty][sql]
  "SELECT b''''''"
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b''''''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_nonempty][sql]
  "SELECT b'''We say: 'hello'.'''"
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	b'''We say: 'hello'.'''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_empty][sql]
  "SELECT br''''''"
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br''''''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_nonempty][sql]
  "SELECT br'''We say: 'hello'.'''"
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          bytes_literal	br'''We say: 'hello'.'''
  
  '''
# ---
# name: test_date_time_literal_ok[literal_date][sql]
  "SELECT DATE '1970-01-01'"
# ---
# name: test_date_time_literal_ok[literal_date][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          date_literal	'1970-01-01'
  
  '''
# ---
# name: test_date_time_literal_ok[literal_datetime][sql]
  "SELECT DATETIME '1970-01-01 12:00:00.01'"
# ---
# name: test_date_time_literal_ok[literal_datetime][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          datetime_literal	'1970-01-01 12:00:00.01'
  
  '''
# ---
# name: test_date_time_literal_ok[literal_time][sql]
  "SELECT DATE '12:00:00.01'"
# ---
# name: test_date_time_literal_ok[literal_time][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          date_literal	'12:00:00.01'
  
  '''
# ---
# name: test_date_time_literal_ok[literal_timestamp][sql]
  "SELECT TIMESTAMP '1970-01-01 12:00:00.01-08'"
# ---
# name: test_date_time_literal_ok[literal_timestamp][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          timestamp_literal	'1970-01-01 12:00:00.01-08'
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot][sql]
  'SELECT 58.'
# ---
# name: test_float_literal_ok[literal_float_dig_dot][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          float_literal	58.
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot_dig_lower_e_minus_dig][sql]
  'SELECT 123.456e-67'
# ---
# name: test_float_literal_ok[literal_float_dig_dot_dig_lower_e_minus_dig][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          float_literal	123.456e-67
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_lower_e_dig][sql]
  'SELECT 4e2'
# ---
# name: test_float_literal_ok[literal_float_dig_lower_e_dig][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          float_literal	4e2
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dot_dig_cap_e_dig][sql]
  'SELECT .1E4'
# ---
# name: test_float_literal_ok[literal_float_dot_dig_cap_e_dig][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          float_literal	.1E4
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_decimal][sql]
  'SELECT 1'
# ---
# name: test_integer_literal_ok[literal_integer_decimal][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex][sql]
  'SELECT 0xff'
# ---
# name: test_integer_literal_ok[literal_integer_hex][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	0xff
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex_cap][sql]
  'SELECT 0XFF'
# ---
# name: test_integer_literal_ok[literal_integer_hex_cap][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	0XFF
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_quoted_alias_adjacent][sql]
  'SELECT 1`alias`'
# ---
# name: test_integer_literal_ok[literal_integer_quoted_alias_adjacent][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	`alias`
  
  '''
# ---
# name: test_interval_literal_ok[literal_interval][sql]
  'SELECT INTERVAL 1 MONTH'
# ---
# name: test_interval_literal_ok[literal_interval][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          interval_literal
            integer_literal	1
            datetime_part	MONTH
  
  '''
# ---
# name: test_json_literal_ok[literal_json][sql]
  "SELECT JSON '{}'"
# ---
# name: test_json_literal_ok[literal_json][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          json_literal	'{}'
  
  '''
# ---
# name: test_numeric_literal_ok[literal_numeric][sql]
  "SELECT NUMERIC '42'"
# ---
# name: test_numeric_literal_ok[literal_numeric][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          numeric_literal	'42'
  
  '''
# ---
# name: test_range_literal_ok[literal_range][sql]
  "SELECT RANGE<DATE> '[1970-01-01, 1970-01-02)'"
# ---
# name: test_range_literal_ok[literal_range][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          range_literal
            range_type
              type
                type_name	DATE
            range_value	'[1970-01-01, 1970-01-02)'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_empty][sql]
  'SELECT ""'
# ---
# name: test_string_literal_ok[literal_string_dquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_nonempty][sql]
  'SELECT "string"'
# ---
# name: test_string_literal_ok[literal_string_dquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_cap][sql]
  'SELECT R"string"'
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_cap][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	R"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_empty][sql]
  'SELECT r""'
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_nonempty][sql]
  'SELECT r"string"'
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_empty][sql]
  "SELECT ''"
# ---
# name: test_string_literal_ok[literal_string_squot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_nonempty][sql]
  "SELECT 'string'"
# ---
# name: test_string_literal_ok[literal_string_squot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'string'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_empty][sql]
  "SELECT r''"
# ---
# name: test_string_literal_ok[literal_string_squot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_nonempty][sql]
  "SELECT r'string'"
# ---
# name: test_string_literal_ok[literal_string_squot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r'string'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_empty][sql]
  'SELECT """"""'
# ---
# name: test_string_literal_ok[literal_string_tdquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	""""""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_nonempty][sql]
  'SELECT """We say: "hello"."""'
# ---
# name: test_string_literal_ok[literal_string_tdquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	"""We say: "hello"."""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_empty][sql]
  'SELECT r""""""'
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r""""""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_nonempty][sql]
  'SELECT r"""We say: "hello"."""'
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r"""We say: "hello"."""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_empty][sql]
  "SELECT ''''''"
# ---
# name: test_string_literal_ok[literal_string_tsquot_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	''''''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_nonempty][sql]
  "SELECT '''We say: 'hello'.'''"
# ---
# name: test_string_literal_ok[literal_string_tsquot_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	'''We say: 'hello'.'''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_empty][sql]
  "SELECT r''''''"
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r''''''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_nonempty][sql]
  "SELECT r'''We say: 'hello'.'''"
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_nonempty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          string_literal	r'''We say: 'hello'.'''
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct][sql]
  'SELECT (1, 2)'
# ---
# name: test_struct_literal_ok[literal_struct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          struct_literal
            integer_literal	1
            integer_literal	2
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_multi][sql]
  'SELECT (1, 2, 3)'
# ---
# name: test_struct_literal_ok[literal_struct_multi][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          struct_literal
            integer_literal	1
            integer_literal	2
            integer_literal	3
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named][sql]
  'SELECT STRUCT(1, 2, 3)'
# ---
# name: test_struct_literal_ok[literal_struct_named][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_alias][sql]
  'SELECT STRUCT(1 AS a, 2 AS b, 3 AS c)'
# ---
# name: test_struct_literal_ok[literal_struct_named_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
                as_alias
                  ident	a
              named_struct_literal_item
                integer_literal	2
                as_alias
                  ident	b
              named_struct_literal_item
                integer_literal	3
                as_alias
                  ident	c
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl][sql]
  'SELECT STRUCT<INT64, INT64, INT64>(1, 2, 3)'
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    type
                      type_name	INT64
                  struct_field
                    type
                      type_name	INT64
                  struct_field
                    type
                      type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_column][sql]
  'SELECT STRUCT<a INT64, b INT64, c INT64>(1, 2, 3)'
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_column][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    ident	a
                    type
                      type_name	INT64
                  struct_field
                    ident	b
                    type
                      type_name	INT64
                  struct_field
                    ident	c
                    type
                      type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_nested][sql]
  'SELECT STRUCT<a INT64, STRUCT<b INT64, c INT64>>(1, STRUCT(2, 3))'
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_nested][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    ident	a
                    type
                      type_name	INT64
                  struct_field
                    type
                      struct_type
                        struct_type_list
                          struct_field
                            ident	b
                            type
                              type_name	INT64
                          struct_field
                            ident	c
                            type
                              type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                named_struct_literal
                  named_struct_literal_prefix
                  named_struct_literal_item_list
                    named_struct_literal_item
                      integer_literal	2
                    named_struct_literal_item
                      integer_literal	3
  
  '''
# ---
